<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   android:layout_marginTop="20dp"
    android:padding="5dp">

    <project.myblog.Widgets.BlogTextViewProximaR
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/desc_title"
        android:textSize="25sp"
        android:textStyle="bold" />

    <project.myblog.Widgets.BlogEditText
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/desc_hint"
        android:inputType="text" />


    <project.myblog.Widgets.BlogButton
        android:id="@+id/savebtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/bottomnav"
        android:text="@string/save_button"
        android:textColor="@android:color/white" />
</LinearLayout>